# TomoArtifactBenchPy

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
notebooks/: evaluate_LIDIA.ipynb
src/ntabpy/: _version.py  evaluator.py  metric.py
src/tabpy/: algorithm.py  evaluator.py  synthetic.py
tests/unit/ntabpy/: test_metric.py
tests/unit/tabpy/: test_metric.py
