[project]
name = "ntabpy"
description = "Helper pacakge for evaluate different ring artifact correction methods"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/KedoKudo/TomoArtifactBenchPy"

[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel",
    "toml",
    "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/ntabpy/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]

[tool.pylint]
max-line-length = 120
disable = [
    "too-many-locals",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-arguments",
    "duplicate-code"
]
